==> LyndonXu/HexRobot/Project/Stm32F4xx/ucosiii/bsp/bsp.c <==
#define   BSP_MODULE
#include  <bsp.h>
#include <os.h>
#include  <stm32f4xx_hal.h>
#define  BSP_BIT_RCC_PLLCFGR_PLLM               25u
#define  BSP_BIT_RCC_PLLCFGR_PLLN              336u
#define  BSP_BIT_RCC_PLLCFGR_PLLP                2u
#define  BSP_BIT_RCC_PLLCFGR_PLLQ                7u
#define  BSP_GPIOG_LED1                        DEF_BIT_06
#define  BSP_GPIOG_LED2                        DEF_BIT_08
#define  BSP_GPIOI_LED3                        DEF_BIT_09
#define  BSP_GPIOC_LED4                        DEF_BIT_07
#define  BSP_REG_DEM_CR                       (*(CPU_REG32 *)0xE000EDFC)
#define  BSP_REG_DWT_CR                       (*(CPU_REG32 *)0xE0001000)
#define  BSP_REG_DWT_CYCCNT                   (*(CPU_REG32 *)0xE0001004)
#define  BSP_REG_DBGMCU_CR                    (*(CPU_REG32 *)0xE0042004)
#define  BSP_DBGMCU_CR_TRACE_IOEN_MASK                   0x10
#define  BSP_DBGMCU_CR_TRACE_MODE_ASYNC                  0x00
#define  BSP_DBGMCU_CR_TRACE_MODE_SYNC_01                0x40
#define  BSP_DBGMCU_CR_TRACE_MODE_SYNC_02                0x80
#define  BSP_DBGMCU_CR_TRACE_MODE_SYNC_04                0xC0
#define  BSP_DBGMCU_CR_TRACE_MODE_MASK                   0xC0
#define  BSP_BIT_DEM_CR_TRCENA                    DEF_BIT_24
#define  BSP_BIT_DWT_CR_CYCCNTENA                 DEF_BIT_00

CPU_INT32U  BSP_CPU_ClkFreq(void)
{
	CPU_INT32U  hclk_freq;


	hclk_freq = HAL_RCC_GetHCLKFreq();
	return (hclk_freq);
}

static void  BSP_LED_Init()
{
	GPIO_InitTypeDef  GPIO_InitStruct = { 0 };

	/* -1- Enable GPIO Clock (to be able to program the configuration registers) */
	__HAL_RCC_GPIOC_CLK_ENABLE();

	/* -2- Configure IO in output push-pull mode to drive external LEDs */
	GPIO_InitStruct.Mode  = GPIO_MODE_OUTPUT_PP;
	GPIO_InitStruct.Pull  = GPIO_PULLUP;
	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;

	GPIO_InitStruct.Pin = GPIO_PIN_13;
	HAL_GPIO_Init(GPIOC, &GPIO_InitStruct);

}

void  BSP_LED_On(CPU_INT08U  led)
{
	switch(led)
	{
	case 0u:
		HAL_GPIO_WritePin(GPIOC, (GPIO_PIN_13), GPIO_PIN_SET);
		break;


	case 1u:
		break;


	case 2u:
		break;


	case 3u:
		break;


	case 4u:
		break;


	default:
		break;
	}
}

void  BSP_LED_Off(CPU_INT08U led)
{
	switch(led)
	{
	case 0u:
		HAL_GPIO_WritePin(GPIOC, (GPIO_PIN_13), GPIO_PIN_RESET);
		break;


	case 1u:
		break;


	case 2u:
		break;


	case 3u:
		break;


	case 4u:
		break;


	default:
		break;
	}
}

void  BSP_LED_Toggle(CPU_INT08U  led)
{
	switch(led)
	{
	case 0u:
		//HAL_GPIO_TogglePin(GPIOC, (GPIO_PIN_13));
		HAL_GPIO_WritePin(GPIOC, (GPIO_PIN_13), 
			HAL_GPIO_ReadPin(GPIOC, GPIO_PIN_13) == GPIO_PIN_SET ? 
			GPIO_PIN_RESET : GPIO_PIN_SET);

		break;


	case 1u:
		break;


	case 2u:
		break;


	case 3u:
		break;


	case 4u:
		break;


	default:
		break;
	}
}
